# CUQIpy

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  ARRAY_BACKEND_COMPLETION.md  BACKENDS.md  Exercise01_Minimal_UQ.ipynb  Exercise02_Distributions.ipynb  Exercise03_Modelling_Inverse_Problems.ipynb  Exercise03_Models.ipynb  Exercise04_Bayesian_Inverse_Problems.ipynb  Exercise04_Posterior_Sampling.ipynb  Exercise05_PDE.ipynb  ExploreTestProblems.ipynb  LICENSE  README.md  Regularized_Gaussian.ipynb  conjugacy_rework_testing.ipynb  debug_gradient.py  debug_test50.py  demo04_Deconvolution_dataobject.ipynb  demo_Gibbs.ipynb  demo_gmrf_gradients.py  exercise02_distributions.ipynb  exercise05_pde.ipynb  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_test_gibbs.py  run_test_mala.py  run_test_pcn.py  run_test_ula.py  sampler_test.py  search.html  searchindex.js  (+11 more)
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
api/: index.html
cuqi/: Data.py  Distribution.py  Model.py  PDEmodel.py  Problem.py  Sampler.py  TestProblem.py  __init__.py  _messages.py  _version.py  astra.py  config.py  data.py  diagnostics.py  distribution.py  fenics.py  fenicsGeometry.py  geometry.py  likelihood.py  model.py  modelCT.py  operator.py  pde.py  problem.py  sampler.py  samples.py  solver.py  testproblem.py  utilities.py
demos/: ExploreTestProblems.ipynb  MCMC_algorithms.py  deblur.py  demo00_CGLS_sampler.py  demo00_MinimalExample.py  demo00_minimal_example.py  demo01_Distributions.py  demo02_Geweke.py  demo03_BayesianInversion.py  demo04_Deconvolution.ipynb  demo04_Deconvolution.py  demo05_Deblurring2D.py  demo05_Geometry.py  demo06_OneDimensionalDiffusion.py  demo07_TwoDimensionalDiffusion.py  demo08_ConditionalPara.py  demo08_TwoDimensionalDiffusion_inclusion.py  demo08_conditional_para.py  demo10_Geometry_2D.py  demo11_CT.py  demo11_CT_FORCE.py  demo11_FenicsGeometry.py  demo12_NUTS.py  demo12_gradients.py  demo12_nuts.py  demo14_Geometry_Discontinuous.py  demo14_Geometry_Discrete.py  demo15_test_LMRF.py  demo15_test_lmrf.py  demo18_DistributionGallery.ipynb  demo18_DistributionGallery.py  demo18_Simple_Distribution_Sampling.py  demo18_distribution_gallery.py  demo19_heat.py  demo20_JoinedGaussian.py  demo20_joined_gaussian.py  demo21_UserDefinedDistribution.py  demo21_user_defined_distribution.py  demo22_Deconv_2D.py  demo22_poisson.ipynb  (+81 more)
dev/: how_to.html  index.html  step_by_step.html  style_guide.html
docs/: conf.py  cuqi.astra.rst  cuqi.data.rst  cuqi.diagnostics.rst  cuqi.distribution.rst  cuqi.fenicsGeometry.rst  cuqi.likelihood.rst  cuqi.pde.rst  cuqi.problem.rst  cuqi.rst  cuqi.utilities.rst  index.rst
external_seminar_code/: implicit_prior_notebook.ipynb  test_implicitprior.py
tests/: basic.py  conftest.py  run_demos.py  test_MRFs.py  test_abstract_distribution_density.py  test_algebra.py  test_array_api_consistency.py  test_array_backends.py  test_bayesian_inversion.py  test_conditional_distributions.py  test_config.py  test_density.py  test_distribution.py  test_distribution_dimensions.py  test_distributions_shape.py  test_geometry.py  test_hello.py  test_legacy_sampler.py  (+17 more)
(+9637 files in other folders)
