[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuqipy"
version = "0.0.1"
description = "Computational Uncertainty Quantification for Inverse problems in Python"
authors = [
    {name = "Nicolai A. B. Riis", email = "nabr@dtu.dk"},
    {name = "Jakob S. Jørgensen", email = "jakj@dtu.dk"},
    {name = "Amal M. Alghamdi", email = "amaal@dtu.dk"}
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies"]
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/CUQI-DTU/CUQIpy"
Documentation = "https://cuqi-dtu.github.io/CUQIpy/"

[tool.setuptools.packages.find]
include = ["cuqi*"]  # package names should match these glob patterns (["*"] by default)
# Alternative move cuqi to src/cuqi

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


