[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CUQIpy"
version = "0.0.1"
description = "Computational Uncertainty Quantification for Inverse problems in Python"
maintainers = [
    {name = "Nicolai A. B. Riis", email = "nabr@dtu.dk"},
    {name = "Jakob S. Jørgensen", email = "jakj@dtu.dk"},
    {name = "Amal M. Alghamdi", email = "amaal@dtu.dk"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[project.urls]
Source = "https://github.com/CUQI-DTU/CUQIpy"
Documentation = "https://cuqi-dtu.github.io/CUQIpy/"
Download = "https://github.com/CUQI-DTU/CUQIpy/releases"
Tracker = "https://github.com/CUQI-DTU/CUQIpy/issues"

[tool.setuptools.packages.find]
include = ["cuqi*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
